Atualizando arquivos de slides

--- a/Customizações-LaTeX/Makefile
+++ b/Customizações-LaTeX/Makefile
@@ -1,5 +1,5 @@
 FLAGS  = -f -pdf -pv -quiet
-CLEANFLAG = -c
+CLEANFLAG = -c -bibtex
 TARGET = Main.tex
 EXTRACLEAN = *.maf *.mtc* *.tdo *.nls *.nlo *.brf *.nav *.snm *.vrb
 
@@ -9,7 +9,7 @@ all:
 cleanall: changevar clean
 
 changevar:
-	$(eval CLEANFLAG=-C -bibtex)
+	$(eval CLEANFLAG=-C)
 
 clean:
 	latexmk ${CLEANFLAG}; rm ${EXTRACLEAN}
